# signal-translator

./: .gitmodules  CMakeLists.txt  Makefile  README.md  configure.sh  make.sh
lib/priv/: dsp.h  dsp.hpp  parse.h  plot.h
src/: Makefile  dsp.cpp  dsp.hpp  main.cpp  parse.cpp  plot.cpp
test/: data_01.txt  data_02_50Hz_.txt  data_03_100Hz.txt  data_04_4_signal.txt  data_05_5_signal_with_noise.txt
